--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "ts-short-link",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
+    "clean": "rm -rf dist",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "postinstall": "prisma generate",
-    "build": "tsc",
+    "build": "npm run clean && tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["link", "encurtador", "typescript", "node", "vercel"],
+  "author": "Israel de Souza",
+  "description": "Um encurtador de link feito com TypeScript, NodeJS e Express.",
   "license": "ISC",
-  "description": "",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.12.0",
